Fix public schedule for overflowing event entries

--- a/app/assets/stylesheets/public_schedule.css
+++ b/app/assets/stylesheets/public_schedule.css
@@ -165,6 +165,7 @@ table.rooms-table td.cell-time, table.rooms-table th.cell-time {
   background: -ms-linear-gradient(top, rgba(255,255,255,0.3) 0%,rgba(255,255,255,0.7) 100%); /* IE10+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4dffffff', endColorstr='#b2ffffff',GradientType=0 ); /* IE6-9 */
   background: linear-gradient(top, rgba(255,255,255,0.3) 0%,rgba(255,255,255,0.7) 100%); /* W3C */
+  overflow: auto;
 }
 
 .event-header a {
@@ -174,7 +175,7 @@ table.rooms-table td.cell-time, table.rooms-table th.cell-time {
 .event-header {
   position: relative;
   width: 100%;
-  height:auto;
+  height: auto;
 }
 
 .event-header h2 {
@@ -183,9 +184,6 @@ table.rooms-table td.cell-time, table.rooms-table th.cell-time {
 }
 
 .event-details {
-  overflow: auto;
-  width: 100%;
-  height: 67%;
   font-size: 11px;
   padding: 2px;
 }
